Finished primary cli and added most static content

--- a/30-cv.md
+++ b/30-cv.md
@@ -1,6 +1,174 @@
 ---
 layout: default
 title: Exp
-permalink: /cv/
+permalink: /exp/
 description: Over a decade creating.
 ---
+# Exp
+
+##### (Experience)
+
+Time isn't everything when it comes to experience; it is all about
+exposure. With my diverse job and educational experiences I have
+worked in just about every capacity there is in the digital
+arena. From independent contracting as a Web developer and designer,
+to network security at one of the countries largest data centers, and
+even running a compute cluster on a plane over Antarctica I've been
+around the block a few times in several different capacities.
+
+## Work
+
+### Senior Systems / DevOps EngineerSenior DevOps Engineer
+<span class="expdate">August 2015 - Current</span>
+
+#### Superpedestrian, Inc.
+
+Build, test, release, and operational support for multiple public Web,
+Mobile, manufacturing, and embedded applications across multiple teams
+consisting of over 10 developers. Manage all of IT for company
+including all networking, storage, server, software, desktop support,
+policy, and security for 40+ person startup with multiple sites, local
+datacenter and Amazon Web Services infrastructure.  Provided
+architecture, design and significant development of high throughput
+API backend for high data rate mobile application. Security, auditing,
+and remediation of issues from in-house developed applications.
+
+### DevOps Manager
+<span class="expdate">August 2013 - August 2015</span>
+
+#### MITx, Massachusetts Institute of Technology
+
+Automated provisioning and configuration of ~100 systems across many
+environments. Release management for several internal and open source
+applications.  Several enhancement, bug fixes and feature
+contributions to the open source applications that make up the edX
+platform.  Created, design, and maintain several full stack
+applications in Flask and Django.  Developed AWS VPC module for
+Ansible along with several enhancements to other AWS and OpenStack
+modules.  Monitoring and performance tuning for apps scaling from
+teams, to campus sized, to worldwide
+
+### IT Manager
+<span class="expdate">August 2011 - August 2013</span>
+
+#### University of Kansas Center for the Remote Sensing of Ice Sheets
+
+Management of five person IT department including hiring, purchasing,
+contract negotiation, budgeting, planning, and supervision. Design,
+management, and acquisition of a petabyte scale SAN environment
+including backup, network sharing, and replication utilizing HDS
+HNAS/BlueArc, EMC Networker, Brocade FC switches, and Linux file
+serving. Maintain, update, and monitor high performance computing
+clusters (TORQUE and MatLab). Provide traditional IT office support
+including routing, switching, firewall, desktop, e-mail, DNS, DHCP,
+print, authentication and Web services. Provide remote and in field IT
+support for Antarctic and Greenland based science missions for NASA
+and the NSF. Logistics, planning, and design for creating reliable
+data backup and collections systems for hundreds of terabytes in
+extreme environments.
+
+Designed, purchased, and implemented a VMWare VSphere cluster to
+replace over a dozen aging and out of warranty systems. Upgraded HPC
+cluster from CentOS 4 to Red Hat EL 6. Upgraded network infrastructure
+to 10/40gbps core and 10gbps Internet for high volume data sharing and
+processing. Researched, architected, and acquired new cluster based
+multi tier hierarchical file system. Negotiated secure off-site
+storage for tape library. Assisted in design and implementation of a
+1GB/s in flight data acquisition and processing system. Implemented
+regular maintenance schedule to increase reliability and ensure up to
+date software.
+
+### Information Systems Analyst
+<span class="expdate">April 2008 - August 2011</span>
+
+#### University of Kansas School of Engineering
+
+Software design, development and maintenance of several Python/Django
+based Web applications. Web design overhaul of all departmental Web
+sites. Web server systems administration on Red Hat Enterprise Linux
+servers.
+
+Backend support for over 500 Windows, Linux, and Mac desktop clients
+including shared computer labs and staff workstations utilizing
+Windows and Linux servers, managed switches, SANs, and perimeter
+firewalls. Maintain and develop VMWare machine level and shared
+storage backups for disaster recovery. Designed and implemented a
+Linux thin client solution for maximizing the performance of older
+hardware in a lab environment. Assisted in implementing and
+maintaining server virtualization project utilizing VMWare ESX and
+VSphere to maximize server hardware efficiency. Designed and assisted
+with a complete redesign of the School of Engineering network to
+utilize modern security and best practices such as VLAN segregation,
+perimeter firewall, RFC 1918 private addressing, wake on LAN, and PXE
+network booting. Assisted in designing, implementing and maintaining
+the DCHP and DNS infrastructure for the school using ISC
+products. Assisted in implementation and maintenance of iSCSI and
+fiber channel SANs.
+
+### Network Security Engineer
+<span class="expdate">May 2006 – April 2008</span>
+
+#### USDA National Information Technology Center
+
+Highly available firewall and routing design, administration,
+monitoring, and deployment using Check Point and Juniper firewalls for
+large scale data center hosting environments. Remote Access VPN
+design, implementation, and maintenance using Checkpoint
+SecuRemote/SecureClient and Juniper Secure Access SSL VPN. System
+administration for over fifty Linux, BSD, and Windows
+servers. Vulnerability assessment using ISS Internet Scanner, Tenable
+Nessus, and eEye Retina. KVM over IP using Raritan Dominion, Paragon,
+and IP-Reach. Authentication server administration and management
+using RADIUS, Cisco Secure ACS, Active Directory, and LDAP. Host,
+wired, and wireless network intrusion detection using Cisco CSA,
+AirDefense, and Enterasys Dragon. Technical documentation and
+diagramming for FISMA compliance and audit requests.
+
+### Research Assistant
+<span class="expdate">July 2005 - May 2006</span>
+
+#### Center for Secure and Dependable Systems
+
+Responsible for implementing secure virtual operating system
+environment on embedded systems utilizing the LynxOS-178 real time
+operating system, for flight control systems. Developed a XML network
+content filter. Created and managed a linux driven honeynet for
+researching computer attacks and attackers modus operandi.
+
+### Developer
+<span class="expdate">Dec. 2000 – Aug. 2002</span>
+
+#### Web Rite Inc. and Logical Solutions LLC
+
+Worked as contractor developing Web applications for a variety of
+clients. Developed a human resource management Web application using
+classic ASP, PHP MySQL, SQL Server, and VBScript. Included Linux and
+Windows server administration. Other applications included retail Web
+applications, calendering and event applications, and Cisco VoIP phone
+applications. Technical documentation including user guides, software
+design, and database design documentation.
+
+## Education
+
+
+### University of Idaho
+<span class="expdate">Dec. 2000 – Aug. 2002</span>
+
+#### Computer Science and Mathematics
+
+Bachelor's degree in Computer Science, minor in Mathematics. Graduated
+Summa cum laude, with a GPA of 3.94. Federal Cyber Corps Scholarship
+student. Notable projects while attending included developing a Web
+based project management application, designing and developing a GPS
+plotting application, and writing a full compiler for a custom
+programming language.
+
+
+### New Horizons
+<span class="expdate">2000</span>
+
+#### Technical School
+
+Microsoft Certified Systems Engineer plus Internet. Coursework
+included Windows Server, TCP/IP, Internet Information Server, and
+Enterprise implementation and support.
