Corrected title typo for current gig

--- a/30-cv.md
+++ b/30-cv.md
@@ -18,7 +18,7 @@ around the block a few times in several different capacities.
 
 ## Work
 
-### Senior Systems / DevOps EngineerSenior DevOps Engineer
+### Senior Systems / DevOps Engineer
 <span class="expdate">August 2015 - Current</span>
 
 #### Superpedestrian, Inc.
@@ -38,11 +38,11 @@ and remediation of issues from in-house developed applications.
 
 #### MITx, Massachusetts Institute of Technology
 
-Automated provisioning and configuration of ~100 systems across many
-environments. Release management for several internal and open source
-applications.  Several enhancement, bug fixes and feature
-contributions to the open source applications that make up the edX
-platform.  Created, design, and maintain several full stack
+Managed small DevOps team. Automated provisioning and configuration of
+~100 systems across many environments. Release management for several
+internal and open source applications.  Several enhancement, bug fixes
+and feature contributions to the open source applications that make up
+the edX platform.  Created, design, and maintain several full stack
 applications in Flask and Django.  Developed AWS VPC module for
 Ansible along with several enhancements to other AWS and OpenStack
 modules.  Monitoring and performance tuning for apps scaling from
