--- a/30-cv.md
+++ b/30-cv.md
@@ -13,25 +13,48 @@ exposure. With my diverse job and educational experiences I have
 worked in just about every capacity there is in the digital
 arena. From independent contracting as a Web developer and designer,
 to network security at one of the countries largest data centers, and
-even running a compute cluster on a plane over Antarctica I've been
+even running a compute cluster on a plane over Antarctica. I've been
 around the block a few times in several different capacities.
 
 ## Work
 
+### Director of Softare
+<span class="expdate">April 2017 - Current</span>
+
+#### Advanced Functional Fabrics of America
+
+Responsible for the technical direction of software and systems for
+the organization. This includes team management and individual
+contribution for mobile, Web, and embedded applications. Worked under
+extremely tight deadlines while partnering with IDEO and our internal
+team to produce native iOS and Android applications to launch a brand
+new physical product centered social network
+[LOOKS](http://lookspack.com). Continually guide development and
+contribute to a Web portal for textile manufacturing industry members
+to collaborate, find funding, and report utilizing Python/Django, and
+VueJS. Created application for controlling Internet devices using
+capacative sensing fabric. Created iOS application to assist with
+manufacturing process of smart backpacks. Created Android application
+for controlling color changing fabric. Technical management and
+review of external contracting team for mobile development. Created
+Agile/Scrum process for rapid software development and responsive
+operations.
+
 ### Senior Systems / DevOps Engineer
-<span class="expdate">August 2015 - Current</span>
+<span class="expdate">August 2015 - May 2017</span>
 
 #### Superpedestrian, Inc.
 
-Build, test, release, and operational support for multiple public Web,
-Mobile, manufacturing, and embedded applications across multiple teams
-consisting of over 10 developers. Manage all of IT for company
-including all networking, storage, server, software, desktop support,
-policy, and security for 40+ person startup with multiple sites, local
-datacenter and Amazon Web Services infrastructure.  Provided
-architecture, design and significant development of high throughput
-API backend for high data rate mobile application. Security, auditing,
-and remediation of issues from in-house developed applications.
+Built, tested, released, and provied operational support for multiple
+public Web, Mobile, manufacturing, and embedded applications across
+multiple teams consisting of over 10 developers. Manage all of IT for
+company including all networking, storage, server, software, desktop
+support, policy, and security for 40+ person startup with multiple
+sites, local datacenter and Amazon Web Services infrastructure.
+Provided architecture, design and significant development of high
+throughput API backend for high data rate mobile
+application. Security, auditing, and remediation of issues from
+in-house developed applications.
 
 ### DevOps Manager
 <span class="expdate">August 2013 - August 2015</span>
