Corrected a spelling mistake

--- a/30-cv.md
+++ b/30-cv.md
@@ -10,7 +10,7 @@ description: Over a decade creating.
 
 Time isn't everything when it comes to experience; it is all about
 exposure. With my diverse job and educational experiences I have
-worked in just about every capacity there is in the digital
+worked in just about every discipline there is in the digital
 arena. From independent contracting as a Web developer and designer,
 to network security at one of the countries largest data centers, and
 even running a compute cluster on a plane over Antarctica. I've been
@@ -33,7 +33,7 @@ new physical product centered social network
 contribute to a Web portal for textile manufacturing industry members
 to collaborate, find funding, and report utilizing Python/Django, and
 VueJS. Created application for controlling Internet devices using
-capacative sensing fabric. Created iOS application to assist with
+touch sensing fabric. Created iOS application to assist with
 manufacturing process of smart backpacks. Created Android application
 for controlling color changing fabric. Technical management and
 review of external contracting team for mobile development. Created
