Typos and adjustments to CV

--- a/30-cv.md
+++ b/30-cv.md
@@ -18,20 +18,20 @@ around the block a few times in several different capacities.
 
 ## Work
 
-### Director of Softare
+### Director of Software
 <span class="expdate">April 2017 - Current</span>
 
 #### Advanced Functional Fabrics of America
 
 Responsible for the technical direction of software and systems for
-the organization. This includes team management and individual
-contribution for mobile, Web, and embedded applications. Worked under
+the organization. Responsibilities include small team management and individual
+contributions for mobile, Web, and embedded applications. Worked under
 extremely tight deadlines while partnering with IDEO and our internal
-team to produce native iOS and Android applications to launch a brand
+team to produce native iOS and Android applications for launching a brand
 new physical product centered social network
-[LOOKS](http://lookspack.com). Continually guide development and
-contribute to a Web portal for textile manufacturing industry members
-to collaborate, find funding, and report utilizing Python/Django, and
+[LOOKS](http://lookspack.com). Continually guide architecture and
+contribute product direction to our Web portal for textile manufacturing industry members
+to collaborate, find funding, and report results utilizing Python/Django and
 VueJS. Created application for controlling Internet devices using
 touch sensing fabric. Created iOS application to assist with
 manufacturing process of smart backpacks. Created Android application
