More fixups/reductions

--- a/30-cv.md
+++ b/30-cv.md
@@ -24,21 +24,17 @@ around the block a few times in several different capacities.
 #### Advanced Functional Fabrics of America
 
 Responsible for the technical direction of software and systems for
-the organization. Responsibilities include small team management and individual
-contributions for mobile, Web, and embedded applications. Worked under
+the organization. Privde small team management and individual
+contributions for mobile, Web, and embedded applications using VueJS,
+Python/Django, Swift, Kotlin, Arduino/C, and Java. Worked under
 extremely tight deadlines while partnering with IDEO and our internal
-team to produce native iOS and Android applications for launching a brand
-new physical product centered social network
-[LOOKS](http://lookspack.com). Continually guide architecture and
-contribute product direction to our Web portal for textile manufacturing industry members
-to collaborate, find funding, and report results utilizing Python/Django and
-VueJS. Created application for controlling Internet devices using
-touch sensing fabric. Created iOS application to assist with
-manufacturing process of smart backpacks. Created Android application
-for controlling color changing fabric. Technical management and
-review of external contracting team for mobile development. Created
-Agile/Scrum process for rapid software development and responsive
-operations.
+team to produce native iOS and Android applications for launching a
+brand new physical product centered social network
+[LOOKS](http://lookspack.com). Created several mobile and embedded
+applications for advanced fabric prototype. Provided technical
+management and review of external contracting team for mobile
+development. Created Agile/Scrum process and DevOps culture for rapid
+software development and responsive operations.
 
 ### Senior Systems / DevOps Engineer
 <span class="expdate">August 2015 - May 2017</span>
@@ -47,7 +43,7 @@ operations.
 
 Built, tested, released, and provied operational support for multiple
 public Web, Mobile, manufacturing, and embedded applications across
-multiple teams consisting of over 10 developers. Manage all of IT for
+multiple teams consisting of over 10 developers. Managed all of IT for
 company including all networking, storage, server, software, desktop
 support, policy, and security for 40+ person startup with multiple
 sites, local datacenter and Amazon Web Services infrastructure.
