Removed redundant opening to AFFOA position

--- a/30-cv.md
+++ b/30-cv.md
@@ -23,8 +23,7 @@ around the block a few times in several different capacities.
 
 #### Advanced Functional Fabrics of America
 
-Responsible for the technical direction of software and systems for
-the organization. Privde small team management and individual
+Provide small team management and individual
 contributions for mobile, Web, and embedded applications using VueJS,
 Python/Django, Swift, Kotlin, Arduino/C, and Java. Worked under
 extremely tight deadlines while partnering with IDEO and our internal
